<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/save_book_details"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>