...
        android:id="@+id/no_owned_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_owned_books"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/myBooksFrag_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
...
