...
    <string name="EditBookAuthor">Author</string>
    <string name="EditBookDetailsTitle">Title</string>
    <string name="EditBookDescriptionHead">Book Description</string>
    <string name="EditBookAuthorHeader">Author</string>
    <string name="EditBookISBNHeader">ISBN</string>
    <string name="editBook">Edit Book</string>
    <string name="deleteBook">Delete</string>
    <string name="borrow_tab">Borrow</string>
    <string name="myBooks_tab">My Books</string>
    <string name="notifications_tab">Notifications</string>
    <string name="profile_tab">Profile</string>
    <string name="book_deletion_failed">Book Deletion Failed</string>
    <string name="Back">ViewBookBack</string>
...
